--- a/RentACar/App.config
+++ b/RentACar/App.config
@@ -6,6 +6,8 @@
 
   <appSettings>
     <add key="cs" value="Server=127.0.0.1;Port=3306;Database=rent_a_car;Uid={0};Pwd={1}" />
+    <add key="minYear" value="2000" />
+    <add key="maxYear" value="2018" />
   </appSettings>
   
 </configuration>
